# mcd_ordering_chatbot

./: .gitignore  README.md
backend/: cli.py  pyproject.toml
backend/src/backend/: main.py  order_handler.py  order_parser.py  order_validator.py  settings.py
backend/src/backend/chat/: message_gen.py  router.py  service.py
backend/src/backend/chat/handlers/: add_item.py  ask_upsell.py  combo.py  dessert.py  fallback.py  finalize.py  greeting.py  slot.py
backend/src/backend/data/: menu_deals.yaml  menu_ingredients.yaml  menu_upsells.yaml  menu_virtual_items.yaml
backend/src/backend/llm/: order_handler.py  order_parser.py  schema.py
backend/src/backend/llm/prompts/: order_parsing.txt
backend/src/backend/logic/: order_engine.py  order_validator.py
backend/src/backend/menu/: loader.py  pricing.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/chat/: page.tsx
